--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "python.analysis.autoImportCompletions": true,
-    "python.analysis.typeCheckingMode": "basic",  
+    "python.analysis.typeCheckingMode": "basic",
     "editor.defaultFormatter": "ms-python.python",
     "editor.formatOnSave": true,
+    "[django-html]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
 }
